// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components > IconTextButton > should render active state 1`] = `
"<button class="button active" type="button">
  <MNI-icon-stub icon="undo-2" size="medium" spin="false"></MNI-icon-stub>Button text
  <!--v-if-->
</button>"
`;

exports[`components > IconTextButton > should render correctly with default props 1`] = `
"<button class="button" type="button">
  <MNI-icon-stub icon="undo-2" size="medium" spin="false"></MNI-icon-stub>Button text
  <!--v-if-->
</button>"
`;

exports[`components > IconTextButton > should render disabled state 1`] = `
"<button class="button disabled" type="button" disabled="">
  <MNI-icon-stub icon="undo-2" size="medium" spin="false"></MNI-icon-stub>Button text
  <!--v-if-->
</button>"
`;

exports[`components > IconTextButton > should render icon on the right when iconPosition is right 1`] = `
"<button class="button" type="button">
  <!--v-if-->Button text<MNI-icon-stub icon="arrow-up-right" size="medium" spin="false"></MNI-icon-stub>
</button>"
`;
